[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rivet-ai"
version = "0.1.0"
description = "A lightweight, developer-first framework to build AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rivet Team", email = "hello@rivet.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
async = ["aiofiles>=0.8.0"]
full = ["openai>=1.0.0", "aiofiles>=0.8.0", "tiktoken>=0.4.0"]
dev = ["pytest>=6.0", "pytest-asyncio>=0.21.0", "black", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/rivet-ai/rivet"
Repository = "https://github.com/rivet-ai/rivet"
Documentation = "https://rivet-ai.readthedocs.io"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]